--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %}
+{% block title %}Публикации в категории - {{ category }}{% endblock %}
 {% block content %}
-  Публикации в категории - {{ slug }}
+  <div class="container py-5">
+    <h1>Публикации в категории - {{ category }}</h1>   
+  </div>
 {% endblock %}
