--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,30 +1,14 @@
-{% extends "base.html" %}
-{% block title %}
-  Лента записей
-{% endblock %}
+{% extends 'base.html' %}
+{% block title %}Лента записей{% endblock %}
 {% block content %}
-  <div class="container py-5">
-    <h1>Лента записей</h1>                        
-    {% for post in posts_list %}
-      <hr>
-        <article>
-          <ul>
-            <li>
-              Место: {{ post.location }}
-            </li>
-            <li>
-              Дата: {{ post.date }}
-            </li>
-            <li>
-              <a>Категория: <a href="not-my-day">not-my-day</a>
-            </li>
-          </ul>          
-          <p>
-            {{ post.text|truncatewords:10 }}
-          </p>
-          <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
-        </article>
-      </hr>
-    {% endfor %}
-  </div>
+    <div class="container py-5">
+        <h1>Лента записей</h1>                        
+        {% for post in posts %}
+            {% include 'includes/posts.html' %}
+            <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
+            {% if not forloop.last %}
+                <hr>
+            {% endif %}
+        {% endfor %}                 
+    </div>
 {% endblock %}
