--- a/blogicum/templates/pages/about.html
+++ b/blogicum/templates/pages/about.html
@@ -1,7 +1,5 @@
-{% extends "base.html" %}
-{% block title %}
-  Наши правила
-{% endblock %}
+{% extends 'base.html' %}
+{% block title %}О проекте{% endblock %}
 {% block content %}
   <div class="container py-5">                        
     <h1>О проекте</h1>
