--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,4 +1,4 @@
-
+{% extends 'base.html' %}
 {% block content %}
   <div class="container py-5">
     <h1>Публикации в категории - {{ category }}</h1>   
