1st review 3rd commit

--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -2,6 +2,6 @@
 {% block title %}{{ post.location }}. {{ post.date }}{% endblock %}
 {% block content %}
   <div class="container py-5">
-    {% include 'includes/posts.html' %}                 
+    {% include 'includes/post.html' %}                 
   </div>
 {% endblock %}
