--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -4,7 +4,7 @@
     <div class="container py-5">
         <h1>Лента записей</h1>                        
         {% for post in posts %}
-            {% include 'includes/posts.html' %}
+            {% include 'includes/post.html' %}
             <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
             {% if not forloop.last %}
                 <hr>
